--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -16,6 +16,7 @@
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
     "options_page": "options.html",
     "permissions": [
         "https://*.emscharts.com/pr/",
