--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,27 +21,37 @@
     "content_scripts": [
     {
         "matches":["https://www.emscharts.com/pr/page2.cfm?*"],
-        "js":["jquery-1.8.3.min.js","page2.js"],
+        "js":["jquery-1.8.3.js","page2.js"],
         "run_at":"document_start"
     },
     {
         "matches":["https://www.emscharts.com/pr/page3.cfm?*"],
-        "js":["jquery-1.8.3.min.js","page3.js"],
+        "js":["jquery-1.8.3.js","page3.js"],
         "run_at":"document_start"
     },
     {
         "matches":["https://www.emscharts.com/pr/page4.cfm?*"],
-        "js":["jquery-1.8.3.min.js","page4.js"],
+        "js":["jquery-1.8.3.js","page4.js"],
         "run_at":"document_start"
     },
     {
         "matches":["https://www.emscharts.com/pr/page5.cfm?*"],
-        "js":["jquery-1.8.3.min.js","page5.js"],
+        "js":["jquery-1.8.3.js","page5.js"],
         "run_at":"document_start"
     },
     {
         "matches":["https://www.emscharts.com/pr/page8.cfm?*"],
-        "js":["jquery-1.8.3.min.js","page8.js"],
+        "js":["jquery-1.8.3.js","page8.js"],
+        "run_at":"document_start"
+    },
+    {
+        "matches":["https://www.emscharts.com/pr/AddProcedure2.cfm?*"],
+        "js":["jquery-1.8.3.js","add-procedure.js"],
+        "run_at":"document_start"
+    },
+    {
+        "matches":["https://www.emscharts.com/pr/EditProcedure.cfm?*"],
+        "js":["jquery-1.8.3.js","edit-procedure.js"],
         "run_at":"document_start"
     }
 
